--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "peerjs": "^1.4.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuejs-datepicker": "^1.6.2",
     "vuetify": "^2.6.0",
     "vuex": "^3.4.0"
   },
