--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@inrupt/solid-client-authn-browser": "^1.17.5",
     "@inrupt/vocab-common-rdf": "^1.0.5",
     "@inrupt/vocab-solid": "^1.0.4",
+    "axios": "^1.7.2",
     "core-js": "^3.6.5",
     "dotenv": "^16.0.3",
     "firebase": "^9.22.2",
